--- a/app/src/main/res/layout/activity_info_garbage.xml
+++ b/app/src/main/res/layout/activity_info_garbage.xml
@@ -22,13 +22,57 @@
         android:id="@+id/textview_select_garbage_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/type_du_d_chet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nomOrdure"
-        app:layout_constraintVertical_bias="0.222" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <RadioGroup
+        android:id="@+id/radiogroup_garbage_type"
+        android:layout_width="344dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_select_garbage_type"
+        app:layout_constraintVertical_bias="0.0">
+
+        <RadioButton
+            android:id="@+id/radioButton_blue_trash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/bleue" />
+
+        <RadioButton
+            android:id="@+id/radioButton_yellow_trash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/jaune" />
+
+        <RadioButton
+            android:id="@+id/radioButton_green_trash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/verte" />
+
+        <RadioButton
+            android:id="@+id/radioButton_black_trash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/noire" />
+
+        <RadioButton
+            android:id="@+id/radioButton_grey_red_brown_trash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/grise_rouge_ou_marron" />
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/button_retour"
@@ -39,7 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomOrdure" />
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup_garbage_type" />
 
     <Button
         android:id="@+id/button_delete"
@@ -51,6 +95,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomOrdure" />
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup_garbage_type" />
+
+    <Button
+        android:id="@+id/button_validate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/valider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup_garbage_type"
+        app:layout_constraintVertical_bias="0.100000024" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
